# screen_record

./: Cargo.toml  build.rs  package-lock.json  package.json  server.js
proto/: upload.proto  uploader.proto
src/: lib.rs  main.rs  main_prev.rs  run.rs  uploader.rs
src/modules/api/: download.rs  mod.rs  upload_video_id_fl.rs
src/modules/components/: mod.rs
src/modules/components/record_screen/: mod.rs  record_screen_fl.rs
src/modules/components/upload_via_grpc/: mod.rs  upload_via_grpc_fl.rs
src/modules/components/video_conversion/: mod.rs  video_conversion_fl.rs
src/modules/components/video_conversion/components/: join_mp4_files_fl.rs  mod.rs
