[package]
name = "screen_record"
version = "0.1.0"
edition = "2021"

[dependencies]
scrap = "0.5"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"

tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
log = "0.4"

tokio-stream = "0.1"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.10"

