[package]
name = "screen_record"
version = "0.1.0"
edition = "2021"

[dependencies]
scrap = "0.5"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"

tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
log = "0.4"

tokio-stream = "0.1"
async-stream = "0.3"
lazy_static = "1.4"

reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"

anyhow = "1.0"

# Upload module git repo
grpc_video_server = { git = "https://github.com/blackshadow-software/grpc_video_server" }

[build-dependencies]
tonic-build = "0.13"

